correction of a litle problem on z-index

--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ body {
 }
 .title_wrapper {
     position: absolute;
-    z-index: 50;
+    z-index: 9;
     height: 100vh;
     width: 100vw;
     display: flex;
